Доработки получения данных из 2GIS и формирование описания. Нужно будет проверить валидацию и модерацию